--- a/app.css
+++ b/app.css
@@ -179,6 +179,13 @@ img {
     width: 80vw;
 }
 
+.logo-girbaud-parte2 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+}
+
 .banner-popup-girbaud-exit-parte1 {
     padding: 10px 10px;
     cursor: pointer;
@@ -299,6 +306,11 @@ img {
 
     .banner-popup-girbaud-logo-mobile {
         display: none;
+    }
+
+    .banner-span-girbaud-box {
+        width: 100%;
+        height: 100vh;
     }
 }
 
